RESOLVED FIXED275789
[WPE][Qt6] Ignore invalid resize attempts
https://bugs.webkit.org/show_bug.cgi?id=275789
Summary [WPE][Qt6] Ignore invalid resize attempts
Nikolas Zimmermann
Reported 2024-06-23 05:21:09 PDT
During QML component initialization, sometimes widths/heights <= 0 are passed to WPEQtView, don't propagate that to the underlying web view.
Attachments
Nikolas Zimmermann
Comment 1 2024-06-23 07:16:58 PDT
EWS
Comment 2 2024-06-23 15:35:42 PDT
Committed 280292@main (7fc5bfadcbf1): <https://commits.webkit.org/280292@main> Reviewed commits have been landed. Closing PR #30093 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.