[WPE][Qt6] Ignore invalid resize attempts https://bugs.webkit.org/show_bug.cgi?id=275789

Reviewed by Philippe Normand.

Do not propagate empty/invalid sizes to the web view upon resizing.
Choose a default size of 800x600, that is used by default, unless
overriden (which is the common case).

Only testable using Qt/WPE integration.

* Source/WebKit/UIProcess/API/wpe/qt6/WPEQtView.cpp:
(WPEQtView::geometryChange):
* Source/WebKit/UIProcess/API/wpe/qt6/WPEQtViewPrivate.h:

Canonical link: https://commits.webkit.org/280292@main